--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@android:dimen/app_icon_size"
+        android:background="#4e7bde"
         android:orientation="vertical">
 
         <LinearLayout
@@ -22,17 +23,18 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/textView1"
                 android:layout_width="20dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:text="Mon"
                 android:textAlignment="center"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                tools:ignore="DuplicateIds" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imageView1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center|center_horizontal"
@@ -40,7 +42,7 @@
                 android:src="@drawable/thunderstorms" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/textView2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -62,7 +64,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/textView3"
                 android:layout_width="20dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -72,7 +74,7 @@
                 android:textSize="20sp" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imageView2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center|center_horizontal"
@@ -80,7 +82,7 @@
                 android:src="@drawable/thunderstorms" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/textView4"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -102,7 +104,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/textView5"
                 android:layout_width="20dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -112,7 +114,7 @@
                 android:textSize="20sp" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imageView3"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center|center_horizontal"
@@ -120,7 +122,7 @@
                 android:src="@drawable/tornado" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/textView6"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -142,7 +144,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/textView7"
                 android:layout_width="20dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -152,7 +154,7 @@
                 android:textSize="20sp" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imageView4"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center|center_horizontal"
@@ -160,7 +162,7 @@
                 android:src="@drawable/wind" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/textView8"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -182,7 +184,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/textView9"
                 android:layout_width="20dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -192,7 +194,7 @@
                 android:textSize="20sp" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imageView5"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center|center_horizontal"
@@ -200,7 +202,7 @@
                 android:src="@drawable/thunderstorms" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/textView10"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -222,7 +224,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/textView11"
                 android:layout_width="20dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -240,7 +242,7 @@
                 android:src="@drawable/tornado" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/textView12"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -262,7 +264,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/textView13"
                 android:layout_width="20dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -272,7 +274,7 @@
                 android:textSize="20sp" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imageView7"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center|center_horizontal"
@@ -280,7 +282,7 @@
                 android:src="@drawable/wind" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/textView14"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
