--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@android:dimen/app_icon_size"
-        android:background="#4e7bde"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
