--- a/app/src/main/res/layout/fragment_weather_and_forecast.xml
+++ b/app/src/main/res/layout/fragment_weather_and_forecast.xml
@@ -14,11 +14,13 @@
         android:id="@+id/fragmentContainerView"
         android:name="vn.edu.usth.weather.WeatherFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/white"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView2"
         android:name="vn.edu.usth.weather.ForecastFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/white"/>
 </LinearLayout>
